updated intro slides and code

--- a/code/python_jupyter_basics.ipynb
+++ b/code/python_jupyter_basics.ipynb
@@ -76,6 +76,7 @@
    "cell_type": "markdown",
    "id": "0ddcb498-2db1-4bec-8b1b-bcd5dfccbbf7",
    "metadata": {
+    "jp-MarkdownHeadingCollapsed": true,
     "tags": []
    },
    "source": [
@@ -115,8 +116,15 @@
     "1. Item 2\n",
     "1. Item 3\n",
     "\n",
-    "### 1.3.6 References\n",
-    "**Check [here](https://towardsdatascience.com/jypyter-notebook-shortcuts-bf0101a98330) for shortcuts in Jupyter Notebook.**"
+    "### 1.3.6 Shortcuts\n",
+    "\n",
+    "Most used shortcuts: \n",
+    "- ```ctrl``` + ```Enter```: run the selected sell\n",
+    "- ```A```:  insert cell above\n",
+    "- ```B```: insert cell below\n",
+    "- Press ```D``` twice: delete the selected sell\n",
+    "\n",
+    "**Check [here](https://towardsdatascience.com/jypyter-notebook-shortcuts-bf0101a98330) for more shortcuts in Jupyter Notebook.**"
    ]
   },
   {
@@ -338,10 +346,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "a3edd117-5c02-4c51-a164-f4ae0e41462b",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "7 % 2  # 7 = 2 * 3 + 1"
    ]
