--- a/code/data_types.ipynb
+++ b/code/data_types.ipynb
@@ -385,7 +385,6 @@
    "cell_type": "markdown",
    "id": "f276caac-1d08-4c79-8417-f9a623b573e2",
    "metadata": {
-    "jp-MarkdownHeadingCollapsed": true,
     "tags": []
    },
    "source": [
@@ -395,7 +394,9 @@
   {
    "cell_type": "markdown",
    "id": "25c705e2-c5bd-4ef2-b8d4-c62e7b4c90b6",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "source": [
     "### 3.2.1 ```len()``` and ```in```"
    ]
@@ -989,7 +990,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "students[\"Bob Johnson\"] = 1\n",
+    "students[\"Bob Johnson\"] = 5\n",
     "students"
    ]
   },
