--- a/code/functions.ipynb
+++ b/code/functions.ipynb
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "357a7e45-3ef1-4b63-9edd-e0251177885f",
    "metadata": {},
    "outputs": [],
@@ -38,10 +38,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "id": "498dc2f9-f22f-42f8-a6aa-a3487bc14054",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Round 1: \n",
+      "\tPlayer 1: 2 points\n",
+      "\tPlayer 2: 4 points\n",
+      "Round 2: \n",
+      "\tPlayer 1: 2 points\n",
+      "\tPlayer 2: 5 points\n",
+      "Round 3: \n",
+      "\tPlayer 1: 1 points\n",
+      "\tPlayer 2: 2 points\n"
+     ]
+    }
+   ],
    "source": [
     "print(\"Round 1: \")\n",
     "print(\"\\tPlayer 1:\", random.randint(1,6), \"points\")\n",
@@ -68,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "id": "0789bca7-d177-4c4e-9c5e-7c02f24ba9c7",
    "metadata": {},
    "outputs": [],
@@ -79,14 +95,40 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "fb6845d2-a102-42fa-92c9-a37fb5981f2f",
+   "metadata": {},
+   "source": [
+    "xxx(): A function in Python\n",
+    "\n",
+    "E.g, print(), input(), randint()"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 39,
    "id": "a24faafd-fc9e-4219-8c18-6b1d0cf384b0",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Round 1:\n",
+      "\tPlayer 1: 3 points\n",
+      "\tPlayer 2: 1 points\n",
+      "Round 2:\n",
+      "\tPlayer 1: 4 points\n",
+      "\tPlayer 2: 3 points\n",
+      "Round 3:\n",
+      "\tPlayer 1: 1 points\n",
+      "\tPlayer 2: 5 points\n"
+     ]
+    }
+   ],
    "source": [
     "print(\"Round 1:\")\n",
-    "dice_game()\n",
+    "dice_game() # Call the function\n",
     "print(\"Round 2:\")\n",
     "dice_game()\n",
     "print(\"Round 3:\")\n",
@@ -111,13 +153,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 40,
    "id": "42583b8c-de71-4663-8e51-fbd5d5372253",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Colorless green ideas sleep furiously\n"
+     ]
+    }
+   ],
    "source": [
     "def myfunc():\n",
-    "    mystr = 'Colorless green ideas sleep furiously'\n",
+    "    mystr = 'Colorless green ideas sleep furiously' # This is defined within the function \n",
     "    print(mystr)\n",
     "\n",
     "myfunc()"
@@ -133,12 +183,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 41,
    "id": "77d536f6-3430-4330-b7ce-1af739b458e3",
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'mystr' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-41-5c5871263af5>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mmystr\u001b[0m \u001b[0;34m+=\u001b[0m \u001b[0;34m\".\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m: name 'mystr' is not defined"
+     ]
+    }
+   ],
    "source": [
-    "mystr += \".\""
+    "mystr += \".\" # That's why it cannot be used globally"
    ]
   },
   {
@@ -153,10 +217,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 43,
    "id": "aae7ad0a-cbab-4114-b5ee-16f822ca3bd4",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Colorless green ideas sleep furiously\n",
+      "Colorless green ideas sleep furiously !!!\n"
+     ]
+    }
+   ],
    "source": [
     "def myfunc_2():\n",
     "    mystr = 'Colorless green ideas sleep furiously'\n",
@@ -178,10 +251,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 45,
    "id": "00fde4d6-2c80-4fb4-9650-f44edd4cdcac",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Colorless green ideas sleep furiously\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'Colorless green ideas sleep furiously'"
+      ]
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "def myfunc():\n",
     "    mystr = 'Colorless green ideas sleep furiously'\n",
@@ -189,6 +280,31 @@
     "    return mystr\n",
     "    print(\"Print out this line, too.\")\n",
     "\n",
+    "myfunc()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "id": "22673b94-d892-4c93-a942-ef18218ff4c6",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Not smaller equal than 7.\n"
+     ]
+    }
+   ],
+   "source": [
+    "def myfunc():\n",
+    "    mynum = 8\n",
+    "    if mynum <= 7:\n",
+    "        return mynum\n",
+    "    else:\n",
+    "        print(\"Not smaller equal than 7.\")\n",
+    "        \n",
     "myfunc()"
    ]
   },
@@ -202,10 +318,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 47,
    "id": "0198e9ee-06e3-40c3-a51a-49bec020620c",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "First string:  black\n",
+      "Second string:  board\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "a = 5\n",
+      "b = 5\n",
+      "c = black board\n"
+     ]
+    }
+   ],
    "source": [
     "def myfunc():\n",
     "    x = input('First string: ')\n",
@@ -243,31 +377,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "ab1dd830-23c9-4f13-a241-92146b81fb91",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def add(a, b):\n",
-    "    return a + b #return the concatenation OR addition of those values"
+    "def add(a, b): # a, b: arguments\n",
+    "    return b + a #return the concatenation OR addition of those values"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "bee4a146-aa7e-4fb0-96d1-6b83fb87300c",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "13"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "add(3, 10)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "18fc8374-d613-45bc-81a1-eed0b458e345",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'blackboard'"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "add('black','board')"
    ]
@@ -282,20 +438,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "d299e29d-cc05-4540-87c5-06a051c6d644",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'boardblack'"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "add(a=\"black\", b=\"board\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "f5e1f717-1247-4bbe-b1ef-10a3314f5b2e",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'boardblack'"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "add(b=\"board\", a=\"black\")"
    ]
@@ -310,10 +488,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "60d9001a-9bc8-4b2c-b013-2fd5687790d9",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'boardblack'"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "add(\"board\", \"black\")"
    ]
@@ -328,7 +517,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "cb438fbd-16a8-4842-b613-2380ee797c28",
    "metadata": {},
    "outputs": [],
@@ -339,20 +528,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "ced40bd0-4654-42bd-8e00-9d19694e9d93",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'black oops'"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "f('black')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "b4480f1e-40a0-4728-ad04-1ba239d12b2b",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'black board'"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "f('black','board')"
    ]
@@ -367,71 +578,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "id": "a9c951f9-8d69-4d6f-a28a-85de368727e0",
    "metadata": {},
    "outputs": [],
    "source": [
     "def func(*args,**kwargs):\n",
-    "    for a in args:\n",
-    "        print(a)  #print unnamed args\n",
+    "    #for a in args:\n",
+    "     #   print(a)  #print unnamed args\n",
     "        \n",
     "    for k in kwargs:\n",
-    "        print(k,'\\t',kwargs[k])  #print named args"
+    "        print(kwargs[k])  #print named args # '\\t',kwargs[k]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "id": "84df7498-1508-443f-8b21-06c00ac5d7a5",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "wow\n",
+      "3.5\n",
+      "hello\n",
+      "oops\n"
+     ]
+    }
+   ],
    "source": [
-    "func(3, 6, 8, x='wow', y=3.5, z=\"hello\")"
+    "func(3, 6, 8, \"Python\", x='wow', y=3.5, z=\"hello\", w=\"oops\")"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "9cf6adc5-be4f-4805-afb0-ee29bd2b0250",
+   "id": "e7a4715f-f1e4-428a-a1b7-ebf9157ba4c7",
    "metadata": {},
    "source": [
-    "# Hands-on:"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "a25353b2-9e5d-452e-a525-8989419180f8",
-   "metadata": {},
-   "source": [
-    "**A program for printing out all adjectives in the list:**"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "d4c11f8e-b54e-42aa-9c9a-db8490e06010",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "list1 = [(\"black\", \"adj\"), (\"computer\", \"noun\"), (\"sunny\", \"adj\"), (\"on\", \"prep\")]\n",
-    "\n",
-    "for word, categ in list1:\n",
-    "    if categ == \"adj\":\n",
-    "        print(word)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "679ec2b4-3bd3-4b9f-9a5c-4428aeecb793",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "list2 = [(\"house\", \"noun\"), (\"quickly\", \"adv\"), (\"happy\", \"adj\"), (\"sleep\", \"verb\")]\n",
-    "\n",
-    "for word, categ in list2:\n",
-    "    if categ == \"adj\":\n",
-    "        print(word)"
+    "{\"x\": \"wow\", \"y\": 3.5, \"z\": \"hello\"}"
    ]
   }
  ],
