cleared output of notebooks

--- a/code/functions.ipynb
+++ b/code/functions.ipynb
@@ -127,7 +127,7 @@
    "outputs": [],
    "source": [
     "def myfunc():\n",
-    "    mystr = 'Colorless green ideas sleep furiously' # This is defined within the function \n",
+    "    mystr = 'Colorless green ideas sleep furiously' \n",
     "    print(mystr)\n",
     "\n",
     "myfunc()"
@@ -150,7 +150,7 @@
    },
    "outputs": [],
    "source": [
-    "mystr += \".\" # That's why it cannot be used globally"
+    "mystr += \".\" "
    ]
   },
   {
@@ -402,11 +402,11 @@
    "outputs": [],
    "source": [
     "def func(*args,**kwargs):\n",
-    "    #for a in args:\n",
-    "     #   print(a)  #print unnamed args\n",
+    "    for a in args:\n",
+    "        print(a)  #print unnamed args\n",
     "        \n",
     "    for k in kwargs:\n",
-    "        print(kwargs[k])  #print named args # '\\t',kwargs[k]"
+    "        print('\\t', kwargs[k], kwargs[k])  #print named args # "
    ]
   },
   {
@@ -417,14 +417,6 @@
    "outputs": [],
    "source": [
     "func(3, 6, 8, \"Python\", x='wow', y=3.5, z=\"hello\", w=\"oops\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "e7a4715f-f1e4-428a-a1b7-ebf9157ba4c7",
-   "metadata": {},
-   "source": [
-    "{\"x\": \"wow\", \"y\": 3.5, \"z\": \"hello\"}"
    ]
   }
  ],
