debugged code for regex exercise

--- a/code/FINAL_ASSIGNMENT.ipynb
+++ b/code/FINAL_ASSIGNMENT.ipynb
@@ -42,7 +42,7 @@
    "id": "2dd2b444-f60a-4518-bbbe-be564d31fb17",
    "metadata": {},
    "source": [
-    "In this assignment, you will work with the file ```peterpan_cleaned.txt``` which you have already created in the exercise ```exercise_regex_fileIO.ipynb```. If you still do not have this file, please re-run the Notebook ```solution_regex_fileIO.ipynb``` to generate one."
+    "In this assignment, you will work with the file ```peterpan_cleaned.txt``` which you have already created in the exercise ```exercise_regex_fileIO.ipynb```. If you still do not have this file, please re-run the Notebook ```solution_regex_fileIO.ipynb``` to generate one. <font color=\"red\">(Please use the latest version of</font> ```solution_regex_fileIO.ipynb``` <font color=\"red\">which can be downloaded</font> [here](https://github.com/qi-yu/teaching-materials-python/tree/main/code)<font color=\"red\">, as we did some debug of the regular expressions in the course!</color>)"
    ]
   },
   {
