debugged code for regex exercise

--- a/code/solution_regex_fileIO.ipynb
+++ b/code/solution_regex_fileIO.ipynb
@@ -169,7 +169,7 @@
     "    line = line.replace(\"_\", \"\")\n",
     "    \n",
     "    line = re.sub(\"Chapter\\s\\w+\\.\\n\", \" \", line)\n",
-    "    line = re.sub(\"[\\sA-Z,!?\\\"']+\\n\", \" \", line) #  Alternative solution:  \\W*[\\sA-Z]{2,}\\W*\\n  \n",
+    "    line = re.sub(\"[\\sA-Z,!?\\\"']+\\n\", \" \", line) #  Alternative solution:  \\W*[\\sA-Z]{2,}\\W*\\n   (Credit to: Giulia D'Agostino)\n",
     "    \n",
     "    if line:\n",
     "        lines_cleaned.append(line)"
